--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
       href="https://fonts.googleapis.com/css2?family=Carter+One&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" type="" href="/css/master.css" />
-    <link rel="stylesheet" type="" href="/css/all.min.css" />
-    <link rel="stylesheet" type="" href="/css/normalize.css" />
+    <link rel="stylesheet" type="" href="css/master.css" />
+    <link rel="stylesheet" type="" href="css/all.min.css" />
+    <link rel="stylesheet" type="" href="css/normalize.css" />
     <link rel="icon" href="images/favicon.png" />
     <script src="app.js" defer></script>
     <title>Etch A Sketch</title>
