--- a/index.html
+++ b/index.html
@@ -4,15 +4,20 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+      <!-- google fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Carter+One&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" type="" href="css/master.css" />
-    <link rel="stylesheet" type="" href="css/all.min.css" />
-    <link rel="stylesheet" type="" href="css/normalize.css" />
+    <!-- main template CSS file -->
+  <link rel="stylesheet" href="css/master.css" />
+  <!-- render all files normally -->
+  <link rel="stylesheet" href="css/normalize.css" />
+  <!-- font awesome lib -->
+  <link rel="stylesheet" href="css/all.min.css" />
+  <!-- favicon -->
     <link rel="icon" href="images/favicon.png" />
     <script src="app.js" defer></script>
     <title>Etch A Sketch</title>
