feat: add iconoir

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <title>etch-e-sketch</title>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/iconoir-icons/iconoir@main/css/iconoir.css">
   <link href="src/css/style.css" rel="stylesheet">
   <script src="src/script/index.js" defer></script>
 </head>
