--- a/index.html
+++ b/index.html
@@ -12,20 +12,22 @@
 
 <body>
   <header>
-    <div class="left-header">
-      <img src="" alt="logo">
-    </div>
-    <div class="right-header">
-      <li id="dark"><i class="iconoir-half-moon"></i></li>
-      <li id="light"><i class="iconoir-sun-light"></i></li>
-      <div class="dropdown">
-        <div class="burger"></div>
-        <div class="burger"></div>
-        <div class="burger"></div>
-        <div class="dropdown-content">
-          <li><a href="https://github.com/i4pg" target="_blank"><i class="iconoir-github"></i></a>
-            <hr>
-            <div class="btn"><button></button></div>
+    <div class="container header">
+      <div class="left-header">
+        <img src="" alt="logo">
+      </div>
+      <div class="right-header">
+        <li id="dark"><i class="iconoir-half-moon"></i></li>
+        <li id="light"><i class="iconoir-sun-light"></i></li>
+        <div class="dropdown">
+          <div class="burger"></div>
+          <div class="burger"></div>
+          <div class="burger"></div>
+          <div class="dropdown-content">
+            <li><a href="https://github.com/i4pg" target="_blank"><i class="iconoir-github"></i></a>
+              <hr>
+              <div class="btn"><button></button></div>
+          </div>
         </div>
       </div>
     </div>
