feat: add dropdown burger

--- a/index.html
+++ b/index.html
@@ -20,9 +20,11 @@
         <li id="dark"><i class="iconoir-half-moon"></i></li>
         <li id="light"><i class="iconoir-sun-light"></i></li>
         <div class="dropdown">
-          <div class="burger"></div>
-          <div class="burger"></div>
-          <div class="burger"></div>
+          <div class="dropdown-button">
+            <div class="burger"></div>
+            <div class="burger"></div>
+            <div class="burger"></div>
+          </div>
           <div class="dropdown-content">
             <li><a href="https://github.com/i4pg" target="_blank"><i class="iconoir-github"></i></a>
               <hr>
