feat: customize dropdown

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/iconoir-icons/iconoir@main/css/iconoir.css">
   <link href="src/css/style.css" rel="stylesheet">
   <script src="src/script/index.js" defer></script>
+  <script src="src/script/dark-light.js" defer></script>
 </head>
 
 <body>
@@ -26,9 +27,11 @@
             <div class="burger"></div>
           </div>
           <div class="dropdown-content">
-            <li><a href="https://github.com/i4pg" target="_blank"><i class="iconoir-github"></i></a>
-              <hr>
-              <div class="btn"><button></button></div>
+            <ul>
+              <li><a href="https://github.com/i4pg" target="_blank"><i class="iconoir-github"></i></a>
+              <li><a href="https://twitter.com/wiyih" target="_blank"><i class="iconoir-twitter"></i></a>
+            </ul>
+            <button></button>
           </div>
         </div>
       </div>
