--- a/index.html
+++ b/index.html
@@ -6,42 +6,47 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/iconoir-icons/iconoir@main/css/iconoir.css">
+  <link href="src/css/hamburgers.css" rel="stylesheet">
+  <link href="src/css/font.css" rel="stylesheet">
   <link href="src/css/style.css" rel="stylesheet">
+  <script src="src/script/hamburger.js" defer></script>
   <script src="src/script/index.js" defer></script>
-  <script src="src/script/dark-light.js" defer></script>
 </head>
 
 <body>
   <header>
     <div class="container header">
       <div class="left-header">
-        <img src="" alt="logo">
+        <h2>etch-e-sketch</h2>
       </div>
       <div class="right-header">
-        <li id="dark"><i class="iconoir-half-moon"></i></li>
-        <li id="light"><i class="iconoir-sun-light"></i></li>
-        <div class="dropdown">
-          <div class="dropdown-button">
-            <div class="burger"></div>
-            <div class="burger"></div>
-            <div class="burger"></div>
-          </div>
-          <div class="dropdown-content">
-            <ul>
-              <li><a href="https://github.com/i4pg" target="_blank"><i class="iconoir-github"></i></a>
-              <li><a href="https://twitter.com/wiyih" target="_blank"><i class="iconoir-twitter"></i></a>
-            </ul>
-            <button></button>
-          </div>
+        <button id="hamburger" class="hamburger hamburger--collapse" type="button">
+          <span class="hamburger-box">
+            <span class="hamburger-inner">
+            </span>
+          </span>
+        </button>
+        <div id="hamburger-content" class="hamburger-content">
+          <ul>
+            <li><a href="https://github.com/i4pg" target="_blank"><i class="iconoir-github"></i></a>
+            <li><a href="https://theodinproject.com" target="_blank"></a><img class="odin" src="src/image/odin-icon.svg"
+                alt="odin logo"></li>
+            <li><a href="https://twitter.com/wiyih" target="_blank"><i class="iconoir-twitter"></i></a>
+          </ul>
+          <hr>
+          <button>customize grid</button>
         </div>
       </div>
     </div>
   </header>
+
   <main>
-
   </main>
-  <footer>
 
+  <footer>
+    <div>
+
+    </div>
   </footer>
 </body>
 
