--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <link href="src/css/hamburgers.css" rel="stylesheet">
   <link href="src/css/font.css" rel="stylesheet">
   <link href="src/css/style.css" rel="stylesheet">
+  <link href="src/css/hover.css" rel="stylesheet">
   <script src="src/script/hamburger.js" defer></script>
   <script src="src/script/index.js" defer></script>
 </head>
@@ -28,10 +29,25 @@
         </button>
         <div id="hamburger-content" class="hamburger-content">
           <ul>
-            <li><a href="https://github.com/i4pg" target="_blank"><i class="iconoir-github"></i></a>
-            <li><a href="https://theodinproject.com" target="_blank"></a><img class="odin" src="src/image/odin-icon.svg"
-                alt="odin logo"></li>
-            <li><a href="https://twitter.com/wiyih" target="_blank"><i class="iconoir-twitter"></i></a>
+
+            <li>
+              <a class="hvr-icon-push" href="https://github.com/i4pg" target="_blank">
+                <i class="hvr-icon iconoir-github"></i>
+              </a>
+            </li>
+
+            <li>
+              <a class="hvr-icon-push" href="https://theodinproject.com" target="_blank">
+                <img class="hvr-icon odin" src="src/image/odin-icon.svg" alt="odin logo">
+              </a>
+            </li>
+
+            <li>
+              <a class="hvr-icon-push" href="https://twitter.com/wiyih" target="_blank">
+                <i class="hvr-icon iconoir-twitter"></i>
+              </a>
+            </li>
+
           </ul>
           <hr>
           <button>customize grid</button>
