feat: add header title effect

--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
   <header>
     <div class="container header">
       <div class="left-header">
-        <h2>etch-e-sketch</h2>
+        <h2>
+          <p>\</p> etch-e-sketch.
+        </h2>
       </div>
       <div class="right-header">
         <button id="hamburger" class="hamburger hamburger--collapse" type="button">
