feat: add introduction

--- a/index.html
+++ b/index.html
@@ -18,9 +18,11 @@
   <header>
     <div class="container header">
       <div class="left-header">
-        <h2>
-          <p>\</p> etch-e-sketch.
-        </h2>
+        <a href="#">
+          <h2>
+            <p>\</p> etch-e-sketch.
+          </h2>
+        </a>
       </div>
       <div class="right-header">
         <button id="hamburger" class="hamburger hamburger--collapse" type="button">
@@ -31,34 +33,41 @@
         </button>
         <div id="hamburger-content" class="hamburger-content">
           <ul>
-
             <li>
               <a class="hvr-icon-push" href="https://github.com/i4pg" target="_blank">
                 <i class="hvr-icon iconoir-github"></i>
               </a>
             </li>
-
             <li>
               <a class="hvr-icon-push" href="https://theodinproject.com" target="_blank">
                 <img class="hvr-icon odin" src="src/image/odin-icon.svg" alt="odin logo">
               </a>
             </li>
-
             <li>
               <a class="hvr-icon-push" href="https://twitter.com/wiyih" target="_blank">
                 <i class="hvr-icon iconoir-twitter"></i>
               </a>
             </li>
-
           </ul>
           <hr>
-          <button>customize grid</button>
+          <button>customize</button>
         </div>
       </div>
     </div>
   </header>
-
   <main>
+    <div class="container main">
+      <div class="intro">
+        <h1>etch-e-sketch</h1>
+        <q cite="https://en.wikipedia.org/wiki/Etch_A_Sketch">Etch A Sketch is a mechanical drawing toy invented
+          by André Cassagnes of France and subsequently manufactured
+          by
+          the Ohio Art Company. It is now owned by Spin Master of Toronto, Ontario, Canada. An Etch A Sketch has a
+          thick,
+          flat gray screen in a red plastic frame.</q>
+        <button type="button">Start Sketching</button>
+      </div>
+    </div>
   </main>
 
   <footer>
