feat: add hover effect

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
           the Ohio Art Company. It is now owned by Spin Master of Toronto, Ontario, Canada. An Etch A Sketch has a
           thick,
           flat gray screen in a red plastic frame.</q>
-        <button type="button">Start Sketching</button>
+        <button type="button" class="hvr-sweep-to-left">Start Sketching</button>
       </div>
     </div>
   </main>
