feat: update grid options

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <link href="src/css/style.css" rel="stylesheet">
   <link href="src/css/hover.css" rel="stylesheet">
   <script src="src/script/hamburger.js" defer></script>
+  <script src="src/script/grid_options.js" defer></script>
   <script src="src/script/index.js" defer></script>
 </head>
 
@@ -50,7 +51,8 @@
             </li>
           </ul>
           <hr>
-          <button>customize</button>
+          <div class="options" id="options">
+          </div>
         </div>
       </div>
     </div>
@@ -65,15 +67,11 @@
           the Ohio Art Company. It is now owned by Spin Master of Toronto, Ontario, Canada. An Etch A Sketch has a
           thick,
           flat gray screen in a red plastic frame.</q>
-        <button type="button" class="hvr-sweep-to-left">Start Sketching</button>
+        <button id="start" type="button" class="hvr-sweep-to-left">Start Sketching</button>
       </div>
     </div>
   </main>
-
   <footer>
-    <div>
-
-    </div>
   </footer>
 </body>
 
