--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <link href="src/css/style.css" rel="stylesheet">
   <link href="src/css/hover.css" rel="stylesheet">
   <script src="src/script/hamburger.js" defer></script>
-  <script src="src/script/grid_options.js" defer></script>
+  <script src="src/script/navbar_options.js" defer></script>
   <script src="src/script/component.js" defer></script>
   <script src="src/script/grid.js" defer></script>
   <script src="src/script/index.js" defer></script>
@@ -61,6 +61,7 @@
   </header>
   <main>
     <div class="container main">
+      <div class="grid" id="grid"></div>
       <div class="intro" id="intro">
         <h1>etch-e-sketch</h1>
         <q cite="https://en.wikipedia.org/wiki/Etch_A_Sketch">Etch A Sketch is a mechanical drawing toy invented
@@ -71,10 +72,22 @@
           flat gray screen in a red plastic frame.</q>
         <button value="16" id="start" type="button" class="hvr-sweep-to-left">Start Sketching</button>
       </div>
-      <div class="grid" id="grid"></div>
     </div>
   </main>
   <footer>
+    <section>
+      <p class="love">
+        <svg viewBox="0 0 1792 1792" preserveAspectRatio="xMidYMid meet" xmlns="http://www.w3.org/2000/svg"
+          style="height: 0.8rem;">
+          <path
+            d="M896 1664q-26 0-44-18l-624-602q-10-8-27.5-26T145 952.5 77 855 23.5 734 0 596q0-220 127-344t351-124q62 0 126.5 21.5t120 58T820 276t76 68q36-36 76-68t95.5-68.5 120-58T1314 128q224 0 351 124t127 344q0 221-229 450l-623 600q-18 18-44 18z"
+            fill="var(--red)"></path>
+        </svg>
+      </p>
+      <p><a target="_blank" href="https://www.twitter/com/wiyih">Abdullah Alattas</a></p>
+      <p class="catppuccin"><a href="https://github.com/catppuccin/catppuccin">Catppuccin colors</a></p>
+      <p class="odin"><a href="https://theodinproject.com">The Odin Project</a></p>
+    </section>
   </footer>
 </body>
 
