--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   <script src="src/script/navbar_options.js" defer></script>
   <script src="src/script/component.js" defer></script>
   <script src="src/script/grid.js" defer></script>
+  <script src="src/script/colorize.js" defer></script>
   <script src="src/script/index.js" defer></script>
 </head>
 
