feat: add colorize script

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <link href="src/css/hover.css" rel="stylesheet">
   <script src="src/script/hamburger.js" defer></script>
   <script src="src/script/navbar_options.js" defer></script>
-  <script src="src/script/component.js" defer></script>
+  <script src="src/script/helper.js" defer></script>
   <script src="src/script/grid.js" defer></script>
   <script src="src/script/colorize.js" defer></script>
   <script src="src/script/index.js" defer></script>
