--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/iconoir-icons/iconoir@main/css/iconoir.css">
-  <link rel="icon" type="image/x-icon" href="images/favicon.png">
+  <link rel="icon" type="image/x-icon" href="src/image/favicon.png">
   <link href="src/css/hamburgers.css" rel="stylesheet">
   <link href="src/css/font.css" rel="stylesheet">
   <link href="src/css/style.css" rel="stylesheet">
@@ -96,7 +96,7 @@
             fill="var(--secondry)"></path>
         </svg>
       </p>
-      <p><a target="_blank" href="https://www.twitter/com/wiyih">Abdullah Alattas</a></p>
+      <p><a target="_blank" href="https://twitter.com/wiyih">Abdullah Alattas</a></p>
     </div>
   </footer>
 </body>
